--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,26 @@ li {
 .transition { transition: 1s all ease; }
 
 /*for container*/
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /*position: relative;*/
+}
+
 .container {
+  width: 30%;
+  height: 40%;
+  margin: 2% 0;
+  overflow: hidden;
+  background-image: url(/assets/Images/bg.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  
+}
+
+/*.container {
   width: 25%;
   height: 650px;
   display: flex;
@@ -116,7 +135,7 @@ li {
   background-repeat: no-repeat;
   background-size: cover;
   border: 3px solid #787878;
-}
+}*/
 
 /*for wrapper*/
 .wrapper {
@@ -128,6 +147,29 @@ li {
 /*=================================
   Header styling starts here
 =================================*/
+header {
+  background: transparent;
+ /* position: absolute;
+  top: 0;
+  left: 35%;
+  right: 20%;
+  width: 30%;*/
+  margin: 2% 0;
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5% 0;
+  background: transparent;
+}
+
+header .wrapper {
+  background: transparent;
+}
+
+/*
 header {
   background: transparent;
 }
@@ -149,6 +191,7 @@ header {
   height: 20%;
   margin: 10% 0;
 }
+*/
 /*=================================
   Header styling ends here
 =================================*/  
@@ -156,6 +199,7 @@ header {
 /*=================================
   main styling starts here
 =================================*/
+/*
 main {
   background-color: aqua;
   display: flex;
@@ -192,7 +236,7 @@ main > section > .wrapper {
   75%  {background-color:green; left:0px; top:200px;}
   100% {background-color:red; left:0px; top:0px;}
 }
-
+*/
 
 
 
